# kxmlgui

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5XmlGuiConfig.cmake.in  KF6XmlGuiConfig.cmake.in  README.md  conanfile.py  kxmlgui.categories  kxmlgui.qdoc  kxmlgui.qdocconf  make_kdepackages_updated.py  metainfo.yaml
autotests/: CMakeLists.txt  kactioncategorytest.cpp  kactioncollectiontest.cpp  kactioncollectiontest.h  kmainwindow_unittest.cpp  kmainwindow_unittest.h  ktoolbar_unittest.cpp  ktooltiphelper_unittest.cpp  kxmlgui_unittest.cpp  kxmlgui_unittest.h  testguiclient.h  testxmlguiwindow.h
autotests/icons/oxygen/: index.theme
docs/: Doxyfile.local
po/af/: kxmlgui5.po  kxmlgui6.po
po/am/: kxmlgui6.po
po/ar/: kxmlgui5.po  kxmlgui6.po
po/as/: kxmlgui5.po  kxmlgui6.po
po/ast/: kxmlgui5.po  kxmlgui6.po
po/az/: kxmlgui5.po  kxmlgui6.po
po/be/: kxmlgui5.po  kxmlgui6.po
po/be@latin/: kxmlgui5.po  kxmlgui6.po
po/bg/: kxmlgui5.po  kxmlgui6.po
po/bn/: kxmlgui5.po  kxmlgui6.po
po/bn_IN/: kxmlgui5.po  kxmlgui6.po
po/br/: kxmlgui5.po  kxmlgui6.po
po/bs/: kxmlgui5.po  kxmlgui6.po
po/ca/: kxmlgui5.po  kxmlgui6.po
po/ca@valencia/: kxmlgui5.po  kxmlgui6.po
po/crh/: kxmlgui5.po  kxmlgui6.po
po/cs/: kxmlgui5.po  kxmlgui6.po
po/csb/: kxmlgui5.po  kxmlgui6.po
po/cy/: kxmlgui5.po  kxmlgui6.po
po/da/: kxmlgui5.po  kxmlgui6.po
po/de/: kxmlgui5.po  kxmlgui6.po
po/el/: kxmlgui5.po  kxmlgui6.po
po/en_GB/: kxmlgui5.po  kxmlgui6.po
po/eo/: kxmlgui5.po  kxmlgui6.po
po/es/: kxmlgui5.po  kxmlgui6.po
po/et/: kxmlgui5.po  kxmlgui6.po
po/eu/: kxmlgui5.po  kxmlgui6.po
po/fa/: kxmlgui5.po  kxmlgui6.po
po/fi/: kxmlgui5.po  kxmlgui6.po
po/fr/: kxmlgui5.po  kxmlgui6.po
po/fy/: kxmlgui5.po  kxmlgui6.po
po/ga/: kxmlgui5.po  kxmlgui6.po
po/gd/: kxmlgui5.po  kxmlgui6.po
po/gl/: kxmlgui5.po  kxmlgui6.po
po/gu/: kxmlgui5.po  kxmlgui6.po
po/ha/: kxmlgui5.po  kxmlgui6.po
po/he/: kxmlgui5.po  kxmlgui6.po
po/hi/: kxmlgui5.po  kxmlgui6.po
po/hne/: kxmlgui5.po  kxmlgui6.po
po/hr/: kxmlgui5.po  kxmlgui6.po
po/hsb/: kxmlgui5.po  kxmlgui6.po
po/hu/: kxmlgui5.po  kxmlgui6.po
po/hy/: kxmlgui5.po  kxmlgui6.po
po/ia/: kxmlgui5.po  kxmlgui6.po
po/id/: kxmlgui5.po  kxmlgui6.po
po/ie/: kxmlgui5.po  kxmlgui6.po
po/is/: kxmlgui5.po  kxmlgui6.po
po/it/: kxmlgui5.po  kxmlgui6.po
po/ja/: kxmlgui5.po  kxmlgui6.po
po/ka/: kxmlgui5.po  kxmlgui6.po
po/kab/: kxmlgui6.po
po/kk/: kxmlgui5.po  kxmlgui6.po
po/km/: kxmlgui5.po  kxmlgui6.po
po/kn/: kxmlgui5.po  kxmlgui6.po
po/ko/: kxmlgui5.po  kxmlgui6.po
po/ku/: kxmlgui5.po  kxmlgui6.po
po/lb/: kxmlgui5.po  kxmlgui6.po
po/lg/: kxmlgui5.po  kxmlgui6.po
po/lo/: kxmlgui6.po
po/lt/: kxmlgui5.po  kxmlgui6.po
po/lv/: kxmlgui5.po  kxmlgui6.po
po/mai/: kxmlgui5.po  kxmlgui6.po
po/mk/: kxmlgui5.po  kxmlgui6.po
po/ml/: kxmlgui5.po  kxmlgui6.po
po/mr/: kxmlgui5.po  kxmlgui6.po
po/ms/: kxmlgui5.po  kxmlgui6.po
po/my/: kxmlgui5.po  kxmlgui6.po
po/nan_TW/: kxmlgui6.po
po/nan_TW@latin/: kxmlgui6.po
po/nb/: kxmlgui5.po  kxmlgui6.po
po/nds/: kxmlgui5.po  kxmlgui6.po
po/ne/: kxmlgui5.po  kxmlgui6.po
po/nl/: kxmlgui5.po  kxmlgui6.po
po/nn/: kxmlgui5.po  kxmlgui6.po
po/oc/: kxmlgui5.po  kxmlgui6.po
po/or/: kxmlgui5.po  kxmlgui6.po
po/pa/: kxmlgui5.po  kxmlgui6.po
po/pl/: kxmlgui5.po  kxmlgui6.po
po/ps/: kxmlgui5.po  kxmlgui6.po
po/pt/: kxmlgui5.po  kxmlgui6.po
po/pt_BR/: kxmlgui5.po  kxmlgui6.po
po/ro/: kxmlgui5.po  kxmlgui6.po
po/ru/: kxmlgui5.po  kxmlgui6.po
po/sa/: kxmlgui6.po
po/se/: kxmlgui5.po  kxmlgui6.po
po/si/: kxmlgui5.po  kxmlgui6.po
po/sk/: kxmlgui5.po  kxmlgui6.po
po/sl/: kxmlgui5.po  kxmlgui6.po
po/sq/: kxmlgui5.po  kxmlgui6.po
po/sr/: kxmlgui5.po  kxmlgui6.po
po/sr@ijekavian/: kxmlgui5.po  kxmlgui6.po
po/sr@ijekavianlatin/: kxmlgui5.po  kxmlgui6.po
po/sr@latin/: kxmlgui5.po  kxmlgui6.po
po/sv/: kxmlgui5.po  kxmlgui6.po
po/ta/: kxmlgui5.po  kxmlgui6.po
po/te/: kxmlgui5.po  kxmlgui6.po
po/tg/: kxmlgui5.po  kxmlgui6.po
po/th/: kxmlgui5.po  kxmlgui6.po
po/tok/: kxmlgui5.po  kxmlgui6.po
po/tr/: kxmlgui5.po  kxmlgui6.po
po/tt/: kxmlgui5.po  kxmlgui6.po
po/ug/: kxmlgui5.po  kxmlgui6.po
po/uk/: kxmlgui5.po  kxmlgui6.po
po/uz/: kxmlgui5.po  kxmlgui6.po
po/uz@cyrillic/: kxmlgui5.po  kxmlgui6.po
po/vi/: kxmlgui5.po  kxmlgui6.po
po/wa/: kxmlgui5.po  kxmlgui6.po
python/: CMakeLists.txt  bindings.h  bindings.xml
src/: CMakeLists.txt  Messages.sh  config-xmlgui.h.cmake  debug.cpp  debug.h  kaboutapplicationcomponentlistdelegate_p.cpp  kaboutapplicationcomponentlistdelegate_p.h  kaboutapplicationcomponentmodel_p.cpp  kaboutapplicationcomponentmodel_p.h  kaboutapplicationconfigattica_p.h.cmake  kaboutapplicationdialog.cpp  kaboutapplicationdialog.h  kaboutapplicationpersonlistdelegate_p.cpp  kaboutapplicationpersonlistdelegate_p.h  kaboutapplicationpersonlistview_p.cpp  kaboutapplicationpersonlistview_p.h  kaboutapplicationpersonmodel_p.cpp  kaboutapplicationpersonmodel_p.h  kaboutkdedialog_p.cpp  kaboutkdedialog_p.h  kaboutplugindialog.cpp  kaboutplugindialog.h  kabstractaboutdialog_p.cpp  kabstractaboutdialog_p.h  kactioncategory.cpp  kactioncategory.h  kactioncollection.cpp  kactioncollection.h  kactionconflictdetector.cpp  kactionconflictdetector_p.h  kactionrunner.cpp  kactionrunner.h  kactionrunnermodel.cpp  kactionrunnermodel.h  kbugreport.cpp  kbugreport.h  kcheckaccelerators.cpp  kcheckaccelerators.h  kdepackages.h  kedittoolbar.cpp  (+73 more)
src/compatforwardheaders/: KXMLGUIBuilder  KXMLGUIClient  KXMLGUIFactory
src/designer/: CMakeLists.txt
src/ksendbugmail/: CMakeLists.txt  main.cpp  main.h  smtp.cpp  smtp.h
tests/: CMakeLists.txt  kbugreporttest.cpp  kmainwindowrestoretest.cpp  kmainwindowrestoretest.h  kmainwindowtest.cpp  kmainwindowtest.h  krulertest.cpp  krulertest.h  ktoolbartest.cpp  kwindowtest.cpp  kwindowtest.h  kwindowtest.rc  kxmlguitest.cpp  kxmlguitest.h  kxmlguitest_part.rc  kxmlguitest_shell.rc  kxmlguiwindowtest.cpp
(+14 files in other folders)
